--- a/index.html
+++ b/index.html
@@ -225,6 +225,27 @@
                 </p>
             </article>
         </div>
+        <section class="comunity">
+            <img src="img/com.png" alt="background" class="com__bg">
+            <div class="comunity-conteiner">
+                <div class="com-left">
+                    <img src="img/face.png" alt="face">
+                    <div class="com-lefttxt">
+                        <p class="comunity__txt">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”</p>
+                    </div>
+                </div>
+                <div class="com-right">
+                    <div class="com-righttxt">
+                        <h1 class="subscribe__txt">Subscribe</h1>
+                        <p class="newletter__txt">FOR OUR NEWLETTER AND PROMOTION</p>
+                    </div>
+                    <div class="com-rightform">
+                        <input class="form-email" type="email" placeholder="Enter Your Email" aria-label="email">
+                        <button type="submit">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="footer center">
             <div class="copy">
                 <p>© 2022 Brand All Rights Reserved.</p>
