--- a/catalog.html
+++ b/catalog.html
@@ -29,8 +29,8 @@
         <div class="top-head center">
             <h2 class="top-head__heading">NEW ARRIVALS</h2>
             <nav class="breadcrumbs">
-                <a href="index.html" class="breadcrumbs__link">HOME /</a>
-                <a href="#" class="breadcrumbs__link">MEN /</a>
+                <a href="index.html" class="breadcrumbs__link">HOME</a>
+                <a href="#" class="breadcrumbs__link">MEN</a>
                 <a href="#" class="breadcrumbs__link breadcrumbs__link_site">NEW ARRIVALS</a>
             </nav>
         </div>
