--- a/cart.html
+++ b/cart.html
@@ -107,9 +107,10 @@
                     <button class="cart__block__right__address__button">GET A QUOTE</button>
                 </div>
                 <div class="cart__block__right__checkout">
-                    <p class="cart__block__right__checkout__sub">SUB TOTAL $900</p>
-                    <p class="cart__block__right__checkout__total">GRAND TOTAL <span class="cart__block__right__checkout__total__span"></span>$900</p>
+                    <p class="cart__block__right__checkout__sub">SUB TOTAL <span class="cart__block__right__checkout__sub__span">$900</span></p>
+                    <p class="cart__block__right__checkout__total">GRAND TOTAL <span class="cart__block__right__checkout__total__span">$900</span></p>
                     <p class="cart__block__right__checkout__line"></p>
+                    <button class="cart__block__right__checkout__button">PROCEED TO CHECKOUT</button>
                 </div>
 
             </div>
