table_version_all_pages

--- a/product.html
+++ b/product.html
@@ -137,7 +137,7 @@
                     </svg>
                     Add to Cart</a>
                 </div>
-                <div class="product">
+                <div class="product product-third">
                     <img class="product__img" src="img/product3.jpg" alt="product3">
                     <div class="product__content">
                         <a href="#" class="product__heading">ELLERY X M'O CAPSULE</a>
