--- a/product.html
+++ b/product.html
@@ -34,8 +34,8 @@
                 <a href="#" class="breadcrumbs__link breadcrumbs__link_site">NEW ARRIVALS</a>
             </nav>
         </div>
-        <section class="slider">
-            <div class="slider_main  center"><img src="img/girl.jpg" alt="girl" class="slider__img"></div>
+        <section class="slider center">
+            <div class="slider_main"><img src="img/girl.jpg" alt="girl" class="slider__img"></div>
             <div class="arrows">
                 <img src="img/arrowleft.svg" alt="arrow-right" class="arrow-right">
                 <img src="img/arrowright.svg" alt="arrow-left" class="arrow-left">
