--- a/registration.html
+++ b/registration.html
@@ -26,7 +26,7 @@
                 <a class="header__link-site" href="#"><img src="img/cart.svg" alt="cart"></a>
             </nav>
         </header>
-        <div class="top-head center">
+        <div class="top-head-registration center">
             <h2 class="top-head__heading">REGISTRATION</h2>
         </div>
         <main class="registration__block center">
