--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
                 <a class="header__link-site" href="#"><img src="img/cart.svg" alt="cart"></a>
             </nav>
         </header>
-        <div class="top-head center">
+        <div class="top-head-cart center">
             <h2 class="top-head__heading">SHOPPING CART</h2>
         </div>
         <main class="cart__block center">
